--- a/index.html
+++ b/index.html
@@ -104,9 +104,11 @@
             <div class="row justify-content-center">
               <h2 class="fw-bold">About</h2>
               <p class="lead text-muted mb-5">
-                I enjoy tackling the challenges that come with software development, and I'm constantly learning and exploring new technologies.
+                I enjoy tackling the challenges that come with software development, and 
+                I'm constantly learning and exploring new technologies.
                 I'm comfortable working in a team or independently.
-                I'm interested in exploring new opportunities in web development and am ready to offer my skills to benefit your company as a <br>Python Developer.
+                I'm interested in exploring new opportunities in web development and 
+                am ready to offer my skills to benefit your company as a Python Developer.
               </p>
             </div>
           </div>
@@ -287,7 +289,7 @@
                 </div>
                 <div class="mb-5">
                   <h6 class="text-uppercase mb-2">Telegram</h6>
-                  <p class="lead mb-0">t.me/ihor_shev</p>
+                  <p class="lead mb-0"><a href="https://t.me/ihor_shev/" target="_blank" style="color:black; text-decoration:none;">@ihor_shev</a></p>
                 </div>
                 <div class="mb-5">
                   <h6 class="text-uppercase mb-2">Email</h6>
@@ -295,7 +297,7 @@
                 </div>
                 <div class="mb-5">
                   <h6 class="text-uppercase mb-2">LinkedIn</h6>
-                  <p class="lead mb-0">linkedin.com/in/ihor-shevchuk-dev</p>
+                  <p class="lead mb-0"><a href="https://www.linkedin.com/in/ihor-shevchuk-dev/" target="_blank" style="color:black; text-decoration:none;">ihor-shevchuk-dev</a></p>
                 </div>
               </div>
             </div>
