--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2 class="text-center fw-bold mb-2">Hi! I am Ihor,</h2>
                 <h2 class="text-primary text-center fw-bold mb-2">a Python Developer</h2>
                 <p class="lead text-muted mb-4">
-                  I specialize in building web applications, bots, and others. Scroll down to see what I have been working on.
+                  I specialize in building web applications, chatbots, and others. Scroll down to see what I have been working on.
                 </p>
                 <div class="d-grid gap-3 d-sm-flex justify-content-center">
                   <a class="btn btn-primary btn-large text-uppercase" href="#about">
@@ -104,11 +104,9 @@
             <div class="row justify-content-center">
               <h2 class="fw-bold">About</h2>
               <p class="lead text-muted mb-5">
-                I enjoy tackling the challenges that come with software development, and 
-                I'm constantly learning and exploring new technologies.
-                I'm comfortable working in a team or independently.
-                I'm interested in exploring new opportunities in web development and 
-                am ready to offer my skills to benefit your company as a Python Developer.
+                I am a Software Engineer with one year of non-commercial experience. 
+                I have developed several projects from scratch by myself, handling both backend and frontend. 
+                I am seeking new opportunities in software development where I can apply my skills and contribute to a company's growth.
               </p>
             </div>
           </div>
