--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                       <div class="badge bg-primary rounded-pill">PostgreSQL</div>
                     </div>
                     <p class="card-text">
-                      An eBay-like e-commerce auction website with email notifications support.
+                      An eBay-like e-commerce auction website with email notifications support
                     </p>
                   </div>
                   <div class="card-footer bg-transparent mb-3">
@@ -210,7 +210,7 @@
                       <div class="badge bg-primary rounded-pill">SQLAlchemy</div>
                     </div>
                     <p class="card-text">
-                      A web application with registration via Telegram bot and displaying user information.
+                      A web application with registration via Telegram bot and displaying user information
                     </p>
                   </div>
                   <div class="card-footer bg-transparent mb-3">
@@ -243,13 +243,64 @@
                       <div class="badge bg-primary rounded-pill">Tkinter</div>
                     </div><br>
                     <p class="card-text">
-                      An application with GUI (Graphical User Interface) that allows you to tidy up your desktop with just one click.
+                      An application with GUI (Graphical User Interface) that allows you to tidy up your desktop with just one click
                     </p>
                   </div>
                   <div class="card-footer bg-transparent mb-3">
                     <a 
                       class="btn btn-outline-primary btn-sm text-uppercase"
                       href="https://github.com/igruk/desktop-cleaner"
+                      target="_blank"
+                    >
+                      <span class="material-icons-outlined me-1">code</span>
+                      Source Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="card h-100 shadow-lg border-0 bg-light">
+                  <div class="card-body p-4">
+                    <h5 class="card-title mb-3">Gif-Bot</h5>
+                    <div class="mb-2">
+                      <div class="badge bg-primary rounded-pill">Aiogram</div>
+                      <div class="badge bg-primary rounded-pill">BeautifulSoup</div>
+                      <div class="badge bg-primary rounded-pill">OpenCV</div>
+                    </div>
+                    <p class="card-text">
+                      A Telegram bot that, after receiving a GIF with a meme, finds information about the origin of that meme
+                    </p>
+                  </div>
+                  <div class="card-footer bg-transparent mb-3">
+                    <a
+                      class="btn btn-outline-primary btn-sm text-uppercase"
+                      href="https://github.com/igruk/gif-bot"
+                      target="_blank"
+                    >
+                      <span class="material-icons-outlined me-1">code</span>
+                      Source Code
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="card h-100 shadow-lg border-0 bg-light">
+                  <div class="card-body p-4">
+                    <h5 class="card-title mb-3">To-Do List</h5>
+                    <div class="mb-2">
+                      <div class="badge bg-primary rounded-pill">Python</div>
+                      <div class="badge bg-primary rounded-pill">FastAPI</div>
+                      <div class="badge bg-primary rounded-pill">React</div>
+                      <div class="badge bg-primary rounded-pill">MongoDB</div>
+                    </div>
+                    <p class="card-text">
+                      A simple to-do list application that uses FastAPI for the backend server, React for the frontend client, and MongoDB for the database server
+                    </p>
+                  </div>
+                  <div class="card-footer bg-transparent mb-3">
+                    <a
+                      class="btn btn-outline-primary btn-sm text-uppercase"
+                      href="https://github.com/igruk/farm-todo"
                       target="_blank"
                     >
                       <span class="material-icons-outlined me-1">code</span>
