--- a/index.html
+++ b/index.html
@@ -114,15 +114,6 @@
             <div class="row">
               <div class="col-lg-4 mx-auto mb-5">
                 <div class="d-flex mb-5 about">
-                  <span class="material-icons-outlined m-auto text-primary">save</span>
-                </div>
-                <h5>Databases</h5>
-                <p class="text-muted mb-0">
-                  I have experience working with databases, both relational (PostgreSQL, MySQL), and non-relational (MongoDB, Redis).
-                </p>
-              </div>
-              <div class="col-lg-4 mx-auto mb-5">
-                <div class="d-flex mb-5 about">
                   <span class="material-icons-outlined m-auto text-primary">code</span>
                 </div>
                 <h5>Development</h5>
@@ -133,11 +124,20 @@
               </div>
               <div class="col-lg-4 mx-auto mb-5">
                 <div class="d-flex mb-5 about">
+                  <span class="material-icons-outlined m-auto text-primary">save</span>
+                </div>
+                <h5>Databases</h5>
+                <p class="text-muted mb-0">
+                  I have experience working with databases, both relational (PostgreSQL, MySQL), and non-relational (MongoDB, Redis).
+                </p>
+              </div>
+              <div class="col-lg-4 mx-auto mb-5">
+                <div class="d-flex mb-5 about">
                   <span class="material-icons-outlined m-auto text-primary">settings</span>
                 </div>
                 <h5>Deployment</h5>
                 <p class="text-muted mb-0">
-                  I have experience with Docker, containerization, and deploying applications to a remote server.
+                  I am familiar with Docker, containerization, and deploying applications to a remote server.
                 </p>
               </div>
             </div>
