--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <h2 class="fw-bold">About</h2>
               <p class="lead text-muted mb-5">
                 I am a Software Engineer with one year of non-commercial experience. 
-                I have developed several projects from scratch by myself, handling both backend and frontend. 
+                I have developed several projects by myself, handling both backend and frontend. 
                 I am seeking new opportunities in software development where I can apply my skills and contribute to a company's growth.
               </p>
             </div>
