--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
             <div class="row justify-content-center">
               <h2 class="fw-bold">About</h2>
               <p class="lead text-muted mb-5">
-                I am a Software Engineer with one year of non-commercial experience. 
-                I have developed several projects by myself, handling both backend and frontend. 
+                I am a Software Developer with one year of non-commercial experience. 
+                I have created several projects by myself, handling both backend and frontend. 
+                I enjoy tackling the challenges that come with software development, and I'm constantly learning and exploring new technologies. 
                 I am seeking new opportunities in software development where I can apply my skills and contribute to a company's growth.
               </p>
             </div>
